<resources>
    <string name="app_name">Jangkau</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tombol_hapus">Tombol Hapus</string>
    <string name="rekening_sumber">Rekening Sumber</string>
    <string name="bca_tabunganku">BCA Tabunganku</string>
    <string name="nomor_rek">8923445590</string>
    <string name="hint_x">xxxxx</string>
    <string name="tv_nomor_rekening_tujuan">Nomor Rekening Tujuan</string>
    <string name="tv_nominal_transfer">Nominal Transfer</string>
    <string name="simpan_rekening">Simpan Rekening</string>
    <string name="tv_catatan_opsional">Catatan (Opsional)</string>
    <string name="tv_rekening_tujuan">Rekening Tujuan</string>

    <string name="social_media">Social Media</string>
    <string name="bagikan">Bagikan</string>
    <string name="tombol_tutup_halaman">Tombol tutup Halaman</string>
    <string name="tombol_telegram">tombol telegram</string>
    <string name="tombol_whatsapp">tombol whatsapp</string>
    <string name="tombol_instagram">tombol instagram</string>
    <string name="tombol_google_mail">tombol google mail</string>

    <string name="empty_username">Username belum diisi</string>
    <string name="empty_password">Password belum diisi</string>

    <string name="all_transaction">Semua Transaksi</string>
    <string name="transfer">Transfer</string>
    <string name="from_date">Dari Tanggal</string>
    <string name="to_date">Sampai Tanggal</string>
    <string name="apply">Terapkan</string>


    <string name="ok">Oke</string>
    <string name="transaksi_not_found">Tidak Ada Transaksi</string>
    <string name="message_transaction">Maaf, tidak ada transaksi yang ditemukan. Silakan atur kembali filter untuk mendapatkan daftar transaksi yang sesuai</string>

    <string name="pilih_tanggal">Pilih tanggal</string>
    <string name="teks_filter_sampai_tanggal">Teks FIlter Sampai Tanggal</string>
    <string name="tombol_untuk_menerapkan_filter">Tombol untuk Menerapkan filter</string>
    <string name="teks_filter_dari_tanggal">Teks Filter Dari tanggal</string>
    <string name="gambar_tidak_ada_akun_yang_tersimpan">Gambar Tidak Ada Akun yang Tersimpan</string>
    <string name="atur_ulang_password">Atur Ulang Password</string>
    <string name="lanjut">Lanjut</string>
    <string name="email">Email</string>
    <string name="lengkapi_data_berikut_untuk_mengatur_ulang_npassword">Lengkapi data berikut untuk mengatur ulang \npassword</string>
    <string name="textfield_input_untuk_email">Textfield input untuk Email</string>
    <string name="lengkapi_ketentuan_password_berikut_untuk_nkeamanan_yang_lebih_baik">Lengkapi ketentuan password berikut untuk \nkeamanan yang lebih baik</string>
    <string name="buat_password_baru">Buat Password Baru</string>
    <string name="kirim_ulang">Kirim Ulang?</string>
    <string name="tombol_kirim_ulang_kode">Tombol kirim ulang kode</string>
    <string name="textfield_untuk_input_password">textfield untuk input password</string>
    <string name="password">Password</string>
    <string name="terdapat_karakter_dsb">Terdapat Karakter (@,!,#)</string>
    <string name="terdapat_huruf_kapital">Terdapat Huruf Kapital</string>
    <string name="terdapat_angka">Terdapat Angka</string>
    <string name="minimal_8_huruf">Minimal 8 Huruf</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="email_belum_di_isi">Email belum di isi</string>
    <string name="invalid_email">Format email salah</string>
    <string name="countdown">01:00</string>
    <string name="tombol_senter">Tombol senter</string>
    <string name="tombol_kembali">Tombol Kembali</string>
    <string name="scanning">Scanning</string>
    <string name="tombol_scan_barcode">Tombol scan barcode</string>
    <string name="scan_qr">Scan QR</string>
    <string name="tombol_generate_barcode">Tombol generate barcode</string>
    <string name="batalkan">Batalkan</string>
    <string name="tombol_batalkan">tombol batalkan</string>
    <string name="silahkan_tunjukkan_kode_qr_ke_kasir_berlaku_hingga">Silahkan tunjukkan kode QR ke Kasir. Berlaku hingga</string>
    <string name="_8923445590">8923445590</string>
    <string name="john_smith">John Smith</string>
    <string name="kode_qris">Kode Qris</string>
    <string name="qr_code_standar_pembayaran_nasional">QR Code Standar pembayaran nasional</string>
    <string name="kami_sedang_memverifikasi_data_anda">Kami sedang memverifikasi data anda.</string>
    <string name="harap_tunggu">Harap Tunggu.</string>
    <string name="textfield_input_untuk_username">textfield input untuk username</string>
    <string name="tombol_beranda">tombol beranda</string>
    <string name="hapus_filter">Hapus Filter</string>
    <string name="mutasi_rekening">Mutasi Rekening</string>
    <string name="apakah_anda_yakin_ingin_logout">Apakah anda yakin ingin logout?</string>
    <string name="perhatian">Perhatian</string>
    <string name="tidak">Tidak</string>
    <string name="ya">Ya</string>
    <string name="maaf_tidak_ada_transaksi_yang_ditemukan_silakan_atur_kembali_filter_untuk_mendapatkan_daftar_transaksi_yang_sesuai">Maaf, tidak ada transaksi yang ditemukan. Silakan atur kembali filter atau lakukan transaksi untuk mendapatkan daftar transaksi yang sesuai</string>
    <string name="gambar_tidak_ada_transaksi">Gambar tidak ada transaksi</string>
    <string name="flash_enabled">Lampu senter diaktifkan</string>
    <string name="flash_disabled">Lampu senter dinonaktifkan</string>

</resources>