<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:paddingTop="50dp"
    android:paddingHorizontal="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".feature.forgot_password.InputNewPasswordActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buat_password_baru"
        android:textStyle="bold"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvSubTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:height="46dp"
        android:text="@string/lengkapi_ketentuan_password_berikut_untuk_nkeamanan_yang_lebih_baik"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutNewPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:contentDescription="@string/textfield_untuk_input_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:errorEnabled="true"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtNewPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:autofillHints=""
            android:background="@drawable/rounded_edittext"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <CheckBox
        android:id="@+id/cbMin8Huruf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="false"
        android:layout_marginTop="16dp"
        android:text="@string/minimal_8_huruf"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutNewPassword"/>

    <CheckBox
        android:id="@+id/cbTerdapatAngka"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="false"
        android:text="@string/terdapat_angka"
        app:layout_constraintTop_toBottomOf="@id/cbMin8Huruf"/>

    <CheckBox
        android:id="@+id/cbHurufKapital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="false"
        android:text="@string/terdapat_huruf_kapital"
        app:layout_constraintTop_toBottomOf="@id/cbTerdapatAngka"/>

    <CheckBox
        android:id="@+id/cbKarakter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:clickable="false"
        android:text="@string/terdapat_karakter_dsb"
        app:layout_constraintTop_toBottomOf="@id/cbHurufKapital"/>


    <Button
        android:id="@+id/btnNext"
        android:enabled="false"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_marginTop="64dp"
        android:text="@string/lanjut"
        android:layout_marginBottom="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:shapeAppearance="?attr/shapeAppearanceCornerLarge" />

</androidx.constraintlayout.widget.ConstraintLayout>