<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:text="@string/perhatian"/>

        <TextView
            android:id="@+id/tvConfirmationMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/apakah_anda_yakin_ingin_logout"
            android:textSize="16sp"
            android:textColor="@android:color/black"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/btnNo"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="13dp"
                android:background="@drawable/rounded_edittext"
                android:text="@string/tidak"
                android:textColor="#0066AE"
                android:textSize="16sp"
                android:layout_weight="1"
                app:shapeAppearance="?attr/shapeAppearanceCornerLarge" />

            <Button
                android:id="@+id/btnYes"
                style="@style/Widget.Material3.Button.Icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="13dp"
                android:layout_marginStart="16dp"
                android:text="@string/ya"
                android:textSize="16sp"
                android:layout_weight="1"
                app:shapeAppearance="?attr/shapeAppearanceCornerSmall" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>
