<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/rouded_rectangle_white"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tv1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:textSize="16sp"
        android:text="@string/transaksi_not_found"
        android:textStyle="bold"
        android:contentDescription="text transaksi tidak ditemukan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/message_transaction"
        android:contentDescription="pesan transaksi"
        android:textSize="14sp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:lineSpacingExtra="5dp"
        android:lineSpacingMultiplier="1.1"
        android:textColor="@android:color/black"
        app:layout_constraintTop_toBottomOf="@+id/tv1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnTransfer"
        android:layout_width="match_parent"
        android:textSize="16sp"
        android:layout_height="65dp"
        app:shapeAppearance="?attr/shapeAppearanceCornerLarge"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="24dp"
        android:text="@string/ok"
        android:contentDescription="Tombol untuk menutup pesan dan kembali"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/message_text" />

</androidx.constraintlayout.widget.ConstraintLayout>